--- a/config/ai.properties
+++ b/config/ai.properties
@@ -13,7 +13,7 @@
 #########################################################################
 
 # Global flag to turn visual asserations off, nothing will be done, all code is skipped
-com.xceptance.xlt.visualassertion.enabled=true
+com.xceptance.xlt.ai.visualassertion.enabled=true
 
 # Result directory for the image output, relative to the test suite
 # main directory
